2006-08-24  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-keyset.c:
    * src/seahorse-key-manager.c: When selected key jumps between tabs 
    select on new tab. Fixes #352311
    
2006-08-24  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/Makefile.am: distcheck fix
    * NEWS:
    * README: Version 0.9.3
    * configure.in: New version
    
2006-08-23  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-agent-ssh.c: Allocate memory for SSH agent
    messages dynamically. Fixes #352364
    
2006-08-22  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gpg-options.c: Use g_file_xxx_contents for 
    atomic writing and reading of files. Fixes #352332
    
2006-08-22  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-cache.glade:
    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent-status.c:
    * agent/seahorse-agent.h: Make SSH keys show up in agent. Fixes #345990
    * libseahorse/seahorse-context.c: Minor context fixes.
    * libseahorse/seahorse-unknown-key.c: Put stock-id property in right place
    
2006-08-21  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-unknown-key.c:
    * libseahorse/seahorse-unknown-key.h: Added "stock-id" property 
    for looking up icon against the SeahorseKey.
    
2006-08-21  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-ssh-agent.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-ssh-key-data.c:
    * libseahorse/seahorse-ssh-key-data.h:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h: