@@ -1,3 +1,13 @@
+2006-08-25  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-ssh-key-data.c:
+    * libseahorse/seahorse-ssh-key-data.h:
+    * libseahorse/seahorse-ssh-operation.c:
+    * libseahorse/seahorse-ssh-operation.h:
+    * libseahorse/seahorse-ssh-key-properties.c:
+    * libseahorse/seahorse-ssh-key-properties.glade: Allow 'renaming' of 
+    SSH keys. Fixes #352868
+    
 2006-08-24  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-key-store.c:
